--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.59.2",
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
+    "framer-motion": "^12.23.26",
     "install": "^0.13.0",
+    "lucide-react": "^0.562.0",
     "npm": "^11.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
