--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
     "framer-motion": "^12.23.26",
+    "i18next": "^25.7.3",
     "install": "^0.13.0",
     "lucide-react": "^0.562.0",
     "npm": "^11.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "tailwind": "^4.0.0",
