--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "npm": "^11.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^16.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
