--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.23.26",
     "i18next": "^25.7.3",
     "install": "^0.13.0",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "npm": "^11.7.0",
     "react": "^19.2.0",
