--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_aGFybWxlc3MtdnVsdHVyZS02Mi5jbGVyay5hY2NvdW50cy5kZXYk
+VITE_SUPABASE_URL=https://zmqtciruappelsjspbee.supabase.co
+VITE_SUPABASE_ANON_KEY=your_anon_key_here
