--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn
 python-multipart
 pillow
 pytesseract
-sentence-transformers 
+sentence-transformers[onnx]
 faiss-cpu
 openai
 python-dotenv
