--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,13 @@
 FROM python:3.10-slim AS builder
 WORKDIR /app
 COPY requirements.txt .
-RUN pip install --no-cache-dir --only-binary=all -r requirements.txt \
+# Install CPU-only Torch first to prevent downloading CUDA/Nvidia libs (saves ~3-4GB)
+RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cpu && \
+    pip install --no-cache-dir --only-binary=all -r requirements.txt \
     && rm -rf /root/.cache /tmp/*
 
 FROM python:3.10-slim
-# ✅ CORRECT TESSERACT PACKAGES (no libtesseract4)
+
 RUN apt-get update && apt-get install -y \
     tesseract-ocr \
     libtesseract-dev \
