--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^16.5.0",
     "react-markdown": "^10.1.0",
+    "react-qr-code": "^2.0.18",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "tailwind": "^4.0.0",
